--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,5 +3,555 @@
 @import "reset";
 @import "libs";
 @import "global";
+* {
+	box-sizing: border-box;
+}
+body {
+	margin: 0;
+	background-color: #f4f4f4;
+	font-family: "Roboto", sans-serif;
+}
+img {
+	display: block;
+}
+.container {
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 60px 15px;
+}
+@media (max-width: 1200px) {
+	.container {
+		max-width: 830px;
+	}
+}
+@media (max-width: 829px) {
+	.container {
+		max-width: 600px;
+	}
+}
+.row {
+	display: flex;
+	justify-content: space-between;
+}
+.main {
+	width: 870px;
+}
+.sidebar {
+	width: 270px;
+	min-width: 200px;
+}
+@media (max-width: 829px) {
+	.sidebar {
+		// display: none;
+		position: fixed;
+		margin-left: 0 !important;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		overflow-y: scroll;
+		background-color: white;
+		padding: 15px;
+		box-shadow: 0px 0px 20px 4px rgba(0, 0, 0, 0.37);
+		transform: translateX(-150%);
+		transition: transform 0.2s ease-in;
+	}
+	.sidebar--mobile-active {
+		transform: translateX(-0%);
+	}
+}
+.main + .sidebar {
+	margin-left: 30px;
+}
+.cards-holder {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	& > .card-link {
+		margin-bottom: 30px;
+	}
+}
+@media (max-width: 599px) {
+	.cards-holder {
+		flex-direction: column;
+		align-items: center;
+	}
+}
+.card-link--hidden {
+	display: none !important;
+}
 
+// Card
+a.card-link {
+	display: inline-block;
+	text-decoration: none;
+	transition: all 0.2 ease-in;
+	&:hover {
+		opacity: 0.9;
+		transform: translateY(-5px);
+	}
+}
+.card {
+	position: relative;
+	width: 270px;
+	background-color: #fff;
+}
+.card__badges {
+	position: absolute;
+	display: flex;
+	top: 10px;
+	left: 15px;
+	right: 15px;
+}
+.card__badges > * + * {
+	margin-left: 10px;
+}
+.card__badge {
+	display: inline-block;
+	height: 22px;
+	padding: 0 10px;
+	color: #000;
+	border-radius: 4px;
+	font-size: 14px;
+	line-height: 23px;
+	&--class {
+		background: #ffcf26;
+	}
+	&--credit {
+		background: #11be75;
+		color: #fff;
+	}
+}
+.card__content {
+	padding: 16px 15px 20px;
+}
+.card__title {
+	font-size: 18px;
+	line-height: 1.16;
+	color: #000;
+	font-weight: bold;
+	margin: 0;
+	margin-bottom: 11px;
+}
+.card__term {
+	margin-bottom: 11px;
+	font-size: 14px;
+	color: #000;
+	line-height: 1.14;
+}
+.card__metro {
+	margin-bottom: 11px;
+	font-size: 14px;
+	color: #000;
+	line-height: 1.14;
+	&::before {
+		content: "";
+		margin-right: 10px;
+		display: inline-block;
+		vertical-align: baseline;
+		width: 16px;
+		height: 11px;
+		background-image: url(../images/icons/metro.svg);
+		background-repeat: no-repeat;
+		background-size: initial;
+	}
+}
+.card__address {
+	font-size: 14px;
+	color: #777;
+	line-height: 1.14;
+}
+
+// Button more
+
+.btn-more {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 80px;
+	background: #e5e5e5;
+	border-radius: 4px;
+	text-align: center;
+	font-size: 18px;
+	line-height: 21px;
+	color: #4290c9;
+	border: none;
+	cursor: pointer;
+	transition: background-color 0.2s ease-in;
+	&:hover {
+		background-color: #d8d8d8;
+	}
+	& img {
+		margin-right: 10px;
+	}
+}
+
+// Sidebar
+.widget + .widget {
+	margin-top: 33px;
+}
+.widget--top-30 {
+	margin-top: 30px !important;
+}
+.widget__title {
+	font-weight: bold;
+	font-size: 18px;
+	line-height: 1.16;
+	color: #000;
+	margin-bottom: 21px;
+	position: relative;
+	cursor: pointer;
+	&::after {
+		content: "";
+		width: 20px;
+		height: 20px;
+		position: absolute;
+		right: 1px;
+		top: -1px;
+		background-image: url("../images/icons/chevron-up.svg");
+		background-repeat: no-repeat;
+		background-size: initial;
+		background-position: center;
+	}
+}
+.widget__title--active::after {
+	transform: rotateX(180deg);
+}
+
+.widget__body--hidden {
+	display: none;
+}
+// Location buttons group
+
+.location {
+}
+.location__row {
+	display: flex;
+	&:first-child {
+		border-radius: 4px 4px 0 0;
+		overflow: hidden;
+		border: 1px solid #d6d6d6;
+	}
+	&:last-child {
+		border-radius: 0 0 4px 4px;
+		border: 1px solid #d6d6d6;
+		border-top: none;
+	}
+}
+.location__btn {
+	font-family: inherit;
+	flex-grow: 1;
+	cursor: pointer;
+	color: #3c3c3c;
+	border: none;
+	background-color: transparent;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 50px;
+	text-align: center;
+	padding: 0 15px;
+	height: 48px;
+	transition: background-color 0.2s ease-in;
+	&:hover {
+		background-color: #fff0bb;
+	}
+}
+.location__checkbox {
+	height: 1px;
+	width: 1px;
+	opacity: 0;
+	appearance: none;
+	position: absolute;
+	&:checked + .location__btn {
+		background-color: #ffcf26;
+		&:hover {
+			background-color: #e0b000;
+		}
+	}
+}
+// Radio
+
+.radio {
+	display: block;
+	cursor: pointer;
+	& + .radio {
+		margin-top: 15px;
+	}
+	&__real {
+		height: 1px;
+		width: 1px;
+		opacity: 0;
+		appearance: none;
+		position: absolute;
+		&:checked + .radio__fake::before {
+			content: "";
+			border-radius: 50%;
+			position: absolute;
+			width: 8px;
+			height: 8px;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			background: #3c3c3c;
+		}
+		&:checked + .radio__fake {
+			background-color: #ffe074;
+		}
+		&:checked ~ .radio__title {
+			font-weight: 500;
+		}
+	}
+	&__fake {
+		position: relative;
+		width: 20px;
+		height: 20px;
+		background-color: #fff;
+		border: 1px solid #777;
+		display: inline-block;
+		border-radius: 50%;
+		margin-right: 7px;
+		vertical-align: bottom;
+	}
+	&__title {
+		font-weight: 400;
+		font-size: 16px;
+		line-height: 1.18;
+		color: #000;
+	}
+}
+// Checkbox
+.checkbox {
+	display: block;
+	cursor: pointer;
+	& + .checkbox {
+		margin-top: 15px;
+	}
+	&__fake {
+		position: relative;
+		width: 20px;
+		height: 20px;
+		background-color: transparent;
+		border: 1px solid #777;
+		display: inline-block;
+		margin-right: 7px;
+		border-radius: 2px;
+		vertical-align: bottom;
+	}
+	&__title {
+		font-weight: 400;
+		font-size: 16px;
+		line-height: 1.18;
+		color: #000;
+	}
+	&__real {
+		height: 1px;
+		width: 1px;
+		opacity: 0;
+		appearance: none;
+		position: absolute;
+		&:checked + .checkbox__fake::before {
+			content: "";
+			background-image: url("../images/icons/check.svg");
+			background-repeat: no-repeat;
+			width: 18px;
+			height: 18px;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			background-position: center;
+			position: absolute;
+			background-size: initial;
+		}
+		&:checked + .checkbox__fake {
+			background-color: #ffe074;
+		}
+		&:checked ~ .checkbox__title {
+			font-weight: 500;
+		}
+	}
+}
+.checkbox--hidden {
+	display: none;
+}
+// Hidden elements widget
+.widget__hidden {
+	display: none;
+}
+.widget__btn-show-hidden {
+	background: transparent;
+	border: none;
+	padding: 0;
+	display: inline-block;
+	font-family: inherit;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 1.19;
+	color: #4290c9;
+	margin-top: 15px;
+	cursor: pointer;
+	transition: all 0.2s ease-in;
+	&:hover {
+		color: #007fda;
+		text-decoration: underline;
+	}
+	&:active,
+	&:focus {
+		outline: none;
+	}
+}
+// Toggle
+
+.toggle {
+	cursor: pointer;
+	&__real {
+		width: 1px;
+		height: 1px;
+		position: absolute;
+		opacity: 0;
+		appearance: none;
+		&:checked ~ .toggle__title {
+			font-weight: 500;
+		}
+		&:checked + .toggle__fake {
+			background: #ffe074;
+		}
+		&:checked + .toggle__fake::before {
+			left: 19px;
+		}
+	}
+	&__fake {
+		width: 37px;
+		height: 20px;
+		border-radius: 10px;
+		display: inline-block;
+		background: #c4c4c4;
+		position: relative;
+		vertical-align: bottom;
+		margin-right: 7px;
+		&::before {
+			content: "";
+			width: 16px;
+			height: 16px;
+			position: absolute;
+			top: 2px;
+			left: 2px;
+			background: #3c3c3c;
+			border-radius: 50%;
+			transition: all 0.2s ease-in;
+		}
+	}
+	&__title {
+		font-weight: 400;
+		font-size: 16px;
+		line-height: 1.18;
+		color: #000;
+	}
+}
+// Form buttons
+.form-btn {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 50px;
+	background-color: transparent;
+	border: 1px solid #d6d6d6;
+	border-radius: 4px;
+	text-align: center;
+	font-family: inherit;
+	cursor: pointer;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 16px;
+	color: #3c3c3c;
+	transition: background-color 0.2s ease-in;
+	& + .form-btn {
+		margin-top: 10px;
+	}
+	&:hover {
+		background-color: #e7e7e7;
+	}
+	& img {
+		margin-right: 6px;
+	}
+}
+.form-btn--submit {
+	background: #ffcf26;
+	border: none;
+	color: #000;
+	&:hover {
+		background: #ffe173;
+	}
+}
+// Button Toggle Sidebar
+.toggle-sidebar {
+	display: none;
+	position: fixed;
+	z-index: 9;
+	right: 15px;
+	top: 8px;
+	width: 45px;
+	height: 45px;
+	background-color: rgb(71, 71, 71);
+	justify-content: center;
+	align-items: center;
+}
+
+@media (max-width: 829px) {
+	.toggle-sidebar {
+		display: flex;
+	}
+}
+.menu-icon-wrapper {
+	width: 30px;
+	height: 30px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0;
+	border: none;
+	background-color: transparent;
+}
+.menu-icon {
+	position: relative;
+	width: 30px;
+	height: 5px;
+	background-color: #fff;
+}
+.menu-icon::before {
+	position: absolute;
+	left: 0;
+	top: -10px;
+	content: "";
+	width: 30px;
+	height: 5px;
+	background: #fff;
+	transition: transform 0.2s ease-in, top 0.2s linear 0.2s;
+}
+.menu-icon::after {
+	position: absolute;
+	left: 0;
+	top: 10px;
+	content: "";
+	width: 30px;
+	height: 5px;
+	background: #fff;
+	transition: transform 0.2s ease-in, top 0.2s linear 0.2s;
+}
+
+.menu-icon.menu-icon-active {
+	background-color: transparent;
+}
+.menu-icon.menu-icon-active::before {
+	transform: rotate(45deg);
+	top: 0;
+	transition: top 0.2s linear, transform 0.2s ease-in 0.2s;
+}
+.menu-icon.menu-icon-active::after {
+	transform: rotate(-45deg);
+	top: 0;
+	transition: top 0.2s linear, transform 0.2s ease-in 0.2s;
+}
 @import "media";
